--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>myfiles-service</module>
         <module>myfiles-mapper</module>
         <module>myfiles-server</module>
+        <module>myfiles-web</module>
         <module>lightning</module>
     </modules>
 
@@ -56,6 +57,12 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
             <version>3.0.0</version>
+        </dependency>
+        <!--spring提供的和redis整合的jar -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>2.7.3</version>
         </dependency>
         <!--Lightning-->
         <dependency>
